v2.2.1/_sources/plugins/endpoint_analytics_endpoints_count_info_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.endpoint_analytics_endpoints_count_info module -- Information module for Endpoint Analytics Endpoints Count
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.2.1).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.endpoint_analytics_endpoints_count_info`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.16.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Endpoint Analytics Endpoints Count.
- Fetch the total count of endpoints that match the given filter criteria.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.1.3.0.0
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-aiSpoofingTrustLevel"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-aispoofingtrustlevel:

      .. rst-class:: ansible-option-title

      **aiSpoofingTrustLevel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-aiSpoofingTrustLevel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      AiSpoofingTrustLevel query parameter. Trust level of the endpoint due to AI spoofing. Possible values are 'low', 'medium', 'high'.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ancPolicy"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-ancpolicy:

      .. rst-class:: ansible-option-title

      **ancPolicy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ancPolicy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      AncPolicy query parameter. ANC policy. Only exact match will be returned.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-authMethod"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-authmethod:

      .. rst-class:: ansible-option-title

      **authMethod**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-authMethod" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      AuthMethod query parameter. Authentication method. Partial string is allowed.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-catc_api_port:

      .. rst-class:: ansible-option-title

      **catc_api_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_api_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-catc_debug:

      .. rst-class:: ansible-option-title

      **catc_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_host"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-catc_host:

      .. rst-class:: ansible-option-title

      **catc_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_password"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-catc_password:

      .. rst-class:: ansible-option-title

      **catc_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_username"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-catc_username:

      .. rst-class:: ansible-option-title

      **catc_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-catc_verify:

      .. rst-class:: ansible-option-title

      **catc_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_version"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-catc_version:

      .. rst-class:: ansible-option-title

      **catc_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-changedProfileTrustLevel"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-changedprofiletrustlevel:

      .. rst-class:: ansible-option-title

      **changedProfileTrustLevel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-changedProfileTrustLevel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      ChangedProfileTrustLevel query parameter. Trust level of the endpoint due to changing profile labels. Possible values are 'low', 'medium', 'high'.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-concurrentMacTrustLevel"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-concurrentmactrustlevel:

      .. rst-class:: ansible-option-title

      **concurrentMacTrustLevel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-concurrentMacTrustLevel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      ConcurrentMacTrustLevel query parameter. Trust level of the endpoint due to concurrent MAC address. Possible values are 'low', 'medium', 'high'.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-deviceType"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-devicetype:

      .. rst-class:: ansible-option-title

      **deviceType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-deviceType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DeviceType query parameter. Type of device to search for. Partial string is allowed.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-hardwareManufacturer"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-hardwaremanufacturer:

      .. rst-class:: ansible-option-title

      **hardwareManufacturer**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-hardwareManufacturer" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      HardwareManufacturer query parameter. Hardware manufacturer to search for. Partial string is allowed.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-hardwareModel"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-hardwaremodel:

      .. rst-class:: ansible-option-title

      **hardwareModel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-hardwareModel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      HardwareModel query parameter. Hardware model to search for. Partial string is allowed.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ip"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-ip:

      .. rst-class:: ansible-option-title

      **ip**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ip" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Ip query parameter. IP address to search for. Partial string is allowed.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ipBlocklistDetected"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-ipblocklistdetected:

      .. rst-class:: ansible-option-title

      **ipBlocklistDetected**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ipBlocklistDetected" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      IpBlocklistDetected query parameter. Flag to fetch endpoints hitting IP blocklist or not.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-macAddress"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-macaddress:

      .. rst-class:: ansible-option-title

      **macAddress**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-macAddress" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      MacAddress query parameter. MAC address to search for. Partial string is allowed.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-macAddresses"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-macaddresses:

      .. rst-class:: ansible-option-title

      **macAddresses**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-macAddresses" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      MacAddresses query parameter. List of MAC addresses to filter on. Only exact matches will be returned.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-natTrustLevel"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-nattrustlevel:

      .. rst-class:: ansible-option-title

      **natTrustLevel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-natTrustLevel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      NatTrustLevel query parameter. Trust level of the endpoint due to NAT access. Possible values are 'low', 'medium', 'high'.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-operatingSystem"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-operatingsystem:

      .. rst-class:: ansible-option-title

      **operatingSystem**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-operatingSystem" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      OperatingSystem query parameter. Operating system to search for. Partial string is allowed.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-postureStatus"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-posturestatus:

      .. rst-class:: ansible-option-title

      **postureStatus**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-postureStatus" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      PostureStatus query parameter. Posture status.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingStatus"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-profilingstatus:

      .. rst-class:: ansible-option-title

      **profilingStatus**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingStatus" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      ProfilingStatus query parameter. Profiling status of the endpoint. Possible values are 'profiled', 'partialProfiled', 'notProfiled'.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-randomMac"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-randommac:

      .. rst-class:: ansible-option-title

      **randomMac**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-randomMac" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      RandomMac query parameter. Flag to fetch endpoints having randomized MAC or not.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-registered"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-registered:

      .. rst-class:: ansible-option-title

      **registered**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-registered" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Registered query parameter. Flag to fetch manually registered or non-registered endpoints.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-trustScore"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-trustscore:

      .. rst-class:: ansible-option-title

      **trustScore**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-trustScore" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      TrustScore query parameter. Overall trust score of the endpoint. It can be provided either as a number value (e.g. 5), or as a range (e.g. 3-7). Provide value as '-' if you want to search for all endpoints where trust score is not assigned.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-unauthPortDetected"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-unauthportdetected:

      .. rst-class:: ansible-option-title

      **unauthPortDetected**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-unauthPortDetected" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      UnauthPortDetected query parameter. Flag to fetch endpoints exposing unauthorized ports or not.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-weakCredDetected"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__parameter-weakcreddetected:

      .. rst-class:: ansible-option-title

      **weakCredDetected**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-weakCredDetected" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      WeakCredDetected query parameter. Flag to fetch endpoints having weak credentials or not.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are ai\_endpoint\_analytics.AiEndpointAnalytics.fetch\_the\_count\_of\_endpoints,
   - Paths used are get /dna/intent/api/v1/endpoint-analytics/endpoints/count,
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK

.. Seealso

See Also
--------

.. seealso::

   `Cisco DNA Center documentation for AI Endpoint Analytics FetchTheCountOfEndpoints <https://developer.cisco.com/docs/dna-center/#!fetch-the-count-of-endpoints>`_
       Complete reference of the FetchTheCountOfEndpoints API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Get all Endpoint Analytics Endpoints Count
      cisco.catalystcenter.endpoint_analytics_endpoints_count_info:
        catc_host: "{{catc_host}}"
        catc_username: "{{catc_username}}"
        catc_password: "{{catc_password}}"
        catc_verify: "{{catc_verify}}"
        catc_api_port: "{{catc_api_port}}"
        catc_version: "{{catc_version}}"
        catc_debug: "{{catc_debug}}"
        headers: "{{my_headers | from_json}}"
        profilingStatus: string
        macAddress: string
        macAddresses: []
        ip: string
        deviceType: string
        hardwareManufacturer: string
        hardwareModel: string
        operatingSystem: string
        registered: true
        randomMac: true
        trustScore: string
        authMethod: string
        postureStatus: string
        aiSpoofingTrustLevel: string
        changedProfileTrustLevel: string
        natTrustLevel: string
        concurrentMacTrustLevel: string
        ipBlocklistDetected: true
        unauthPortDetected: true
        weakCredDetected: true
        ancPolicy: string
      register: result




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-dnac_response"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_endpoints_count_info_module__return-dnac_response:

      .. rst-class:: ansible-option-title

      **dnac_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco CATALYST Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"count": 0}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

